# quant-lab-signals

./: .gitignore  README.md  make_signal.py  pyproject.toml  requirements-dev.txt  requirements.txt  signals.json
.github/workflows/: ci.yml
configs/: engine.yaml  notify.yaml  symbols.json
docs/: 01_financial_time_series_statistics.md  02_rule_diagnostics.md  02_rule_diagnostics_and_improvements.md  03_backtest_tutorial_notes.md  03_ml_bridge_feature_label_validation.md  04_strategy_design_and_risk.md  05_iphone_integration_plan.md
documents/error_memo/: error_memo_ENV_SETUP_2026_02_11.md
notebooks/: 01_visualize_signals.ipynb  02_rule_diagnostics.ipynb  03_backtest.ipynb  04_returns_distribution.ipynb  05_volatility_clustering.ipynb  06_autocorr_stationarity_basics.ipynb  07_rule_ablation_study.ipynb  08_parameter_sweep.ipynb  09_feature_engineering_basics.ipynb  10_walk_forward_validation.ipynb  11_position_sizing_and_costs.ipynb  12_strategy_report.ipynb
src/: cli.py
src/quantlab/: __init__.py  backtest.py  cli.py  contract.py  data.py  indicators.py  io.py  ml_bridge.py  plot.py  rules.py  stats.py
tests/: test_cli.py  test_contract.py  test_ml_bridge.py  test_rules.py  test_stats.py
